fix dark mode color issue

--- a/frontend/src/components/file-tree.scss
+++ b/frontend/src/components/file-tree.scss
@@ -191,6 +191,10 @@
       background: var(--surface-900);
       border-color: var(--surface-700);
 
+      .p-menuitem-active > .p-menuitem-link {
+        background: var(--surface-700);
+      }
+
       .p-menuitem {
         .p-menuitem-link {
           &:hover:not(.p-error) {
